# mini_online_store

./: README.md  manage.py  pyproject.toml
apps/orders/: models.py
apps/products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py
mini_online_store/: asgi.py  settings.py  urls.py  wsgi.py
templates/users/: activate_email.html  activation_failed.html  activation_success.html  session_expired.html
